--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ button img{
 select{
     flex: 1;
     color: white;
-    background:#403d84;
+    background:#31303e;
     padding: 0 20px;
     height: 50px;
     outline: 0;
